--- a/css/style.css
+++ b/css/style.css
@@ -82,18 +82,28 @@ input[type="email"],
 input[type="tel"],
 textarea,
 #city {
-  background: rgba(255, 255, 255, 0.445);
   border: none;
   margin: 10px 0 20px;
   padding: 15px; 
   background-color: rgba(128, 128, 128, .1);
   border-radius: 5px;
-  width: 100%
+  width: 100%;
+  color: rgb(128, 128, 128);
 }
 
 label,
 p {
     color: rgb(128, 128, 128);
+}
+
+input[placeholder="required"] {
+    font-style: italic;
+    text-align: end;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus {
+    text-align: start;
 }
 
 /* -- Newsletter -- */ 
@@ -144,6 +154,11 @@ button {
     color: rgba(128, 128, 128, .75)
 }
 
+/* -- Media Query -- */ 
+
+@media (min-width: 768px) {
+    
+}
 
 
 
