--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 
 h2,
 h3 {
-    color: #303c49;
+    color: #093145;
 }
 
 fieldset {
@@ -26,7 +26,7 @@ fieldset {
 }
 
 .banner {
-    background-color: #303c49;
+    background-color: #093145;
     padding: 10px;
     text-align: center;
     margin: auto;
@@ -49,7 +49,7 @@ fieldset {
 
 .border-top {
     height: 5px;
-    background-color: #303c49;
+    background-color: #093145;
     max-width: 90%;
     text-align: center;
     margin: auto;
@@ -57,7 +57,7 @@ fieldset {
 
 .border-bottom {
     height: 2px;
-    background-color: #303c49;
+    background-color: #093145;
     max-width: 90%;
     text-align: center;
     margin-top: 3px;
@@ -67,9 +67,16 @@ fieldset {
 
 .main-form,
 .newsletter {
-    display: flex;
     width: 90%;
     margin: auto;
+    display: -webkit-flex;
+            display: flex;
+            -webkit-flex-wrap: wrap;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+            -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .main-form h2 {
@@ -111,6 +118,19 @@ input[placeholder="required"] {
 input[type="text"]:focus,
 input[type="email"]:focus {
     text-align: start;
+    font-style: normal;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+textarea:focus,
+#city:focus {
+    background-color: aliceblue;
+    border: none;
+    transition: 1s;
+    box-shadow: 0px 4px 9px rgba(0,0,0,.4);
+    
 }
 
 /* -- Newsletter -- */ 
@@ -132,6 +152,21 @@ input[type="radio"] {
     margin: auto;
 }
 
+.newsletter-checkbox {
+    background-color: oldlace;
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0px 1px 5px rgba(0,0,0,.4);
+}
+
+.newsletter-format {
+    background-color: aliceblue;
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 2rem;
+    box-shadow: 0px 1px 5px rgba(0,0,0,.4);
+}
+
 .checkbox-label,
 .subscriptions {
     padding-left: .85rem;
@@ -144,6 +179,7 @@ button {
     width: 100%;
     border: 1px solid #52bab3;
     border-radius: 5px;
+    box-shadow: 0px 1px 5px rgba(0,0,0,.4);
 }
 
  .sign-up {
@@ -177,6 +213,7 @@ button {
 /* -- Media Query -- */ 
 
 @media (min-width: 768px) {
+    
     .main-form,
     .newsletter {
         width: 65%;
@@ -208,7 +245,6 @@ button {
     .zip-label {
         width: 20%;
     }
-
 
 }
 
